update, added jwt

--- a/templ/index.html
+++ b/templ/index.html
@@ -12,6 +12,7 @@
     ></script>
   </head>
   <body class="h-screen">
+    <h1>DEV BUILD</h1>
     <div class="grid h-full w-full">
       <div class="flex flex-col self-center justify-self-center w-max">
         <h1 class="text-4xl">You are in queue</h1>
